2005-07-05  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Modified the SI Fixes source files to use the new intrinsic calling
	  method ('->'). Also, removed duplicate (unused) files.
	* actors.cc: NPCs should only react if the weapon actually does something
	  to them.

2005-07-05    <jeff@mini.nerble.net>
	* usecode/compiler/*.{cc,h}: Allow intrinsics to be called as
	'methods', so that the following are equivalent:
		c = UI_get_item_flag(item, 10);
		c = item->get_item_flag(10);
		c = get_item_flag(10);

2005-07-03  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Modified detection of 'delayed blast' projectile, as it was too inclusive
	  before. I also am interpreting its lack of projectile data to mean it
	  should not be rendered. This matches the original.
	* Modified the way SI sleep arrows work to better match the original.

2005-07-04  Ryan Nunn  <colourles@users.sourceforge.net>
	* exult.cc : Ensure Audio is deinitialized on exit
	* audio/midi_drivers/LowLevelMidiDriver.cpp, 
	  audio/midi_drivers/XMidiFile.cpp : Small changes to MT32 display handling

2005-07-03    <jeff@mini.nerble.net>

	* When equipping monsters, give them ammo for their weapons.
	* When an NPC can't pathfind to an enemy in combat, just let him
	wander a short way towards the enemy before retrying.

2005-07-03  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actors.cc, shapes/shapeinf.h: Modified constant names and used them for attack
	  frames. Also changed the default attack sequence for when there is no weapon.
2005-07-03  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actors.cc, shapes/shapeinf.h: Implemented weapon-dependent frame sequences
	  for attacks
	* effects.cc, effects.h: Slightly modified the way burst arrows are handled,
	  eliminated some hard-coded data about explosion sizes and moved the definition
	  of Get_explosion_shape out of Explosion_effect class.
2005-07-02  Marzo Sette Torres Junior <marzojr@yahoo.com>