@@ -275,7 +275,7 @@
 	USECODE_INTRINSIC_PTR(set_intercept_item),		// 0xc6 (Exult)
 	USECODE_INTRINSIC_PTR(printf),				// 0xc7 (Exult)
 	USECODE_INTRINSIC_PTR(remove_from_keyring),		// 0xc8 (Exult)
-	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0xc9
+	USECODE_INTRINSIC_PTR(begin_casting_mode),		// 0xc9 (Exult)
 	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0xca
 	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0xcb
 	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0xcc
